--- a/app/views/static_pages/help.html.erb
+++ b/app/views/static_pages/help.html.erb
@@ -1,2 +1,6 @@
+<% provide(:title, "Help") %>
+
 <h1>StaticPages#help</h1>
 <p>Find me in app/views/static_pages/help.html.erb</p>
+
+<h2> This is the help page and shit </h2>
