--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,5 +1,3 @@
-<h1>New User</h1>
-
-<%= render 'form' %>
-
-<%= link_to 'Back', users_path %>
+<% provide(:title, 'Sign up') %>
+<h1>Sign Up </h1>
+<p>Coming Soon...</p>
